--- a/html/login.html
+++ b/html/login.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body style >
+    <!-- = "background-image: url('https://blog.kakaocdn.net/dn/EUyI3/btqDPYEYgss/x3dY0uYvYR6dqEamgVP6rK/img.jpg');
+    background-size: cover;" -->
     <a href="index.html"><img src="/img/1.jpg" class="logo" alt="." style="margin:2rem"></a>
-
     <main class="login-main">
         <h1 class="display-5 login-text">Login</h1>
         <div class="row">
