--- a/html/index.html
+++ b/html/index.html
@@ -9,95 +9,55 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <header></header>
-  <main class="container">
-    <h1 class="display-5 sub-title">특가</h1>
-    example:
-    <div class ="row container border main-box">
-
-      <div class="card book" style="width: 15rem;">
-        <img src="../img/ex.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">제목: Book is alive</h5>
-          <p class="card-text">4권 언넝 가져가셔요</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">10,000 👍</li>
-          <li class="list-group-item">거의 새 것</li>
-        </ul>
-      </div>
-
-      <div class="card book" style="width: 15rem;">
-        <img src="../img/ex.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">제목: Book is alive</h5>
-          <p class="card-text">4권 언넝 가져가셔요</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">10,000 👍</li>
-          <li class="list-group-item">거의 새 것</li>
-        </ul>
-      </div>
-
+    <div class = "account mt-3" role="group">
+        <a href="login.html"><p class="btn rounded-pill">login</p></a>
+        <a href="register.html"><p class="btn rounded-pill">register</p></a>
     </div>
+    <br>
 
-    <h1 class="display-5 sub-title">최근 거래</h1>
-    
-    example:
-    <div class ="row container border main-box">
-
-      <div class="card book" style="width: 15rem;">
-        <img src="../img/ex.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">제목: Book is alive</h5>
-          <p class="card-text">4권 언넝 가져가셔요</p>
+    <h1 class = "title"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1>
+    <form action = "">
+        <div class = "mt-5 mx-auto main-search-bar input-group mb-3">
+            <input class = "form-control rounded-pill" type="text" placeholder="검색어를 입력해주십시오.">
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">10,000 👍</li>
-          <li class="list-group-item">거의 새 것</li>
-        </ul>
-      </div>
+    </form>
 
-      <div class="card book" style="width: 15rem;">
-        <img src="../img/ex.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">제목: Book is alive</h5>
-          <p class="card-text">4권 언넝 가져가셔요</p>
+    <main class = "mx-auto">
+        <div class = "recent">recent</div>
+        <div class = "contents-container">
+
+          <div class = "content"> <!-- example-->
+            <img class = "book-icon" src = "../img/ex.png">
+            <div class = "content-info">
+              <div>알고리즘 및 실습</div>
+              <div>출판사, 지은이, 출판년도</div>
+              <div>가격</div>
+            </div>
+          </div>
+
+          <div class = "content"> <!-- example-->
+            <img class = "book-icon" src = "../img/ex.png">
+            <div class = "content-info">
+              <div>알고리즘 및 실습</div>
+              <div>출판사, 지은이, 출판년도</div>
+              <div>가격</div>
+            </div>
+          </div>
+
+          <div class = "content"> <!-- example-->
+            <img class = "book-icon" src = "../img/ex.png">
+            <div class = "content-info">
+              <div>알고리즘 및 실습</div>
+              <div>출판사, 지은이, 출판년도</div>
+              <div>가격</div>
+            </div>
+          </div>
+
+
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">10,000 👍</li>
-          <li class="list-group-item">거의 새 것</li>
-        </ul>
-      </div>
-
-    </div>
-
-    <h1 class="display-5 sub-title">우수 회원</h1>
-    
-    example:
-    <div class ="row container border main-box">
-
-      <div class="card book" style="width: 15rem;">
-        <img src="../img/human.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">전강옥</h5>
-          <p class="card-text">코딩 좋아하는.. 사람입니다..</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">142,857 points!</li>
-          <li class="list-group-item">절대신</li>
-        </ul>
-      </div>
-
-    </div>
-
-
-  </main>
-
+    </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
-  <!--JQUERY-->
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="/js/header.js"></script>
 </body>
 </html>
