--- a/dumpster/index.html
+++ b/dumpster/index.html
@@ -6,15 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class = "account mt-3" role="group">
-        <a href="login.html"><p class="btn rounded-pill">login</p></a>
-        <a href="register.html"><p class="btn rounded-pill">register</p></a>
-    </div>
-    <br>
-
     <h1 class = "title"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1>
     <form action = "">
         <div class = "mt-5 mx-auto main-search-bar input-group mb-3">
