게시글 페이지/작성 페이지 남음

--- a/html/login.html
+++ b/html/login.html
@@ -15,11 +15,11 @@
     <main class="login-main">
         <h1 class="display-5 login-text">로그인</h1>
         <div class="row">
-            <form class="login-form"></form>
-                <span class="login-input">
+            <form class = "flex-space-between">
+                <div class="login-input">
                     <input type="text" class="form-control login-id" placeholder="ID" aria-label="Username" aria-describedby="addon-wrapping">
                     <input type="password" class="form-control login-pw" placeholder="Password" aria-label="Username" aria-describedby="addon-wrapping">
-                </span>
+                </div>
                 <input class="btn login-button" type="submit" value="Login">
             </form>
         </div>
