--- a/html/search.html
+++ b/html/search.html
@@ -16,25 +16,23 @@
   <main class="container search-main">
     <h1 class="display-5 sub-title">'창의적'에 대한 검색 결과</h1>
 
-    <!-- example -->
     <div class ="container border main-box">
+
+    <!-- example -->
       <a href = "search-book-selected.html">
         <div class = "content margin-top"> 
           <img class = "book-icon" src = "../img/ex.png">
           <div class = "content-info settings">
-            <div>창의적 발차기</div>
+            <div>창의적 잠자기</div>
             <span>저자</span>
             <span>출판사</span>
             <span>출판 년도</span>
-
           </div>
           <div class = "state">1건</div>
         </div>
       </a>
-    </div>
 
     <!-- example -->
-    <div class ="container border main-box">
       <a href = "search-book-selected.html">
         <div class = "content margin-top"> 
           <img class = "book-icon" src = "../img/ex.png">
@@ -43,13 +41,12 @@
             <span>저자</span>
             <span>출판사</span>
             <span>출판 년도</span>
-
           </div>
           <div class = "state">2건</div>
         </div>
       </a>
-
     </div>
+
 
   </main>
 
