--- a/html/index_logined.html
+++ b/html/index_logined.html
@@ -20,8 +20,8 @@
                 <span class = "col"><a href = "index.html">로그아웃</a></span>
             </div>
         </div>
-        
-        <div class = "post-button">판매글 작성하기</div>
+
+        <div class = "post-button"><a href = "post.html">판매글 작성하기</a></div>
     
         <div class = "chat">
             <div class = "chat-button btn">
