--- a/html/post-view.html
+++ b/html/post-view.html
@@ -62,7 +62,7 @@
 
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel">책 검색</h5>
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel">최근 거래 평</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
 
