게시글 틀 일단 완성?

--- a/html/member_edit.html
+++ b/html/member_edit.html
@@ -20,32 +20,32 @@
 
             <div class="col-md-10 member-detail">
                 <div>이름</div>
-                <input type="text" class="form-control rPw" value="홍길동" required>
+                <input type="text" class="form-control" value="홍길동" required>
             </div>
 
             <div class="col-md-10 member-detail">
                 <div>전화번호</div>
-                <input type="text" class="form-control rPw" value="010-1234-5678" required>
+                <input type="text" class="form-control" value="010-1234-5678" required>
             </div>
 
             <div class="col-md-10 member-detail">
                 <div>아이디</div>
-                <input type="text" class="form-control rPw" value="ID" required>
+                <input type="text" class="form-control" value="ID" required>
             </div>
 
             <div class="col-md-10 member-detail">
                 <div>비밀번호</div>
-                <input type="password" class="form-control rPw" value="aaaaaaaaa" required>
+                <input type="password" class="form-control" value="aaaaaaaaa" required>
             </div>
             
             <div class="col-md-10 member-detail">
                 <div>학교</div>
-                <input type="text" class="form-control rPw" value="한기대" required>
+                <input type="text" class="form-control" value="한기대" required>
             </div>
 
             <div class="col-md-10 member-detail">
                 <div>학과</div>
-                <input type="text" class="form-control rPw" value="컴공" required>
+                <input type="text" class="form-control" value="컴공" required>
             </div>
         </div>
 
