--- a/html/member_info.html
+++ b/html/member_info.html
@@ -14,7 +14,7 @@
     <main class="member-info-main mx-auto">
         <div class = "member-info-title">
             <h1 class="member-info-text">회원정보</h1>
-            <div class = "edit"><a href = "member-edit.html">수정</a></div>
+            <div class = "edit"><a href = "member_edit.html">수정</a></div>
         </div>
         <div class="row">
 
@@ -107,16 +107,6 @@
             <div class = "post-list invisible">
 
                 <div class = "post-block"> <!-- example-->
-                    <div class = "content"> 
-                        <img class = "book-icon" src = "../img/ex.png">
-                        <div class = "content-info">
-                            <div>알고리즘 및 실습</div>
-                            <div>출판사, 지은이, 출판년도</div>
-                            <div>가격, 사용감</div>
-                            <div>학교, 판매방식</div>
-                        </div>
-                        <div class = "state">거래 완료</div>
-                    </div>
                     <div class = "sold">
                         <div>
                             <div class = "date"> 2023-06-04</div>
@@ -134,16 +124,6 @@
 
 
                 <div class = "post-block"> <!-- example-->
-                    <div class = "content"> 
-                        <img class = "book-icon" src = "../img/ex.png">
-                        <div class = "content-info">
-                            <div>알고리즘 및 실습</div>
-                            <div>출판사, 지은이, 출판년도</div>
-                            <div>가격, 사용감</div>
-                            <div>학교, 판매방식</div>
-                        </div>
-                        <div class = "state">거래 완료</div>
-                    </div>
                     <div class = "sold">
                         <div>
                             <div class = "date"> 2023-06-04</div>
