알림, 쪽지 추가

--- a/html/search.html
+++ b/html/search.html
@@ -101,8 +101,14 @@
     <div class = "account-logined margin-header">
       <div class = "member-info" role="group">
           <div class = "member-detail">
+            <div class="detail-text">
               <div>전강욱 님</div>
               <div>절대신</div>
+          </div>
+          <div class="detail-img">
+            <a href="alarm.html"><img class="bell-image" src="../img/bell1.png"></a>
+            <a href="mail.html"><img class="mail-image" src="../img/mail1.png"></a>
+          </div>
           </div>
           <div class = "member-detail">
               <span class = "col"><a href = "member_info.html">회원정보</a></span>
