관심 게시글 틀 추가

--- a/html/member_info.html
+++ b/html/member_info.html
@@ -42,6 +42,40 @@
             </div>
         </div>
 
+        <!-- 관심 게시글 -->
+        <div class = "posts-container"> 
+            <div class = "view-posts-button btn">
+                <text>▼</text> 관심 게시글
+            </div>
+            <div class = "post-list invisible">
+
+                <div class = "post-block"> <!-- example-->
+                    <div class = "favor-content"> 
+                        <img class = "book-icon" src = "../img/ex.png">
+                        <div class = "favor-content-info">
+                            <div>알고리즘 및 실습</div>
+                            <div>출판사, 지은이, 출판년도</div>
+                            <div>가격, 사용감</div>
+                            <div>학교, 판매방식</div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class = "post-block"> <!-- example-->
+                    <div class = "favor-content"> 
+                        <img class = "book-icon" src = "../img/ex.png">
+                        <div class = "favor-content-info">
+                            <div>알고리즘 및 실습</div>
+                            <div>출판사, 지은이, 출판년도</div>
+                            <div>가격, 사용감</div>
+                            <div>학교, 판매방식</div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
         <!-- 판매 내역 -->
         <div class = "posts-container"> 
             <div class = "view-posts-button btn">
