db 불러오기, 회원등급버튼, 채팅 뒤로가기 버튼

--- a/html/alarm.html
+++ b/html/alarm.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <a href="index.html"><h1 class = "title logo"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1></a>
+    <a href="index_logined.html"><h1 class = "title logo"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1></a>
     <h1 class="sub-title">알림함</h1>
 
     <div class="alarm-list read">
@@ -50,6 +50,7 @@
         </div>
   
         <div class = "post-button">판매글 작성하기</div>
+        <div class = "post-button"><a href = "memberTierList.html">회원 등급 보기</a></div>
   
         <div class = "chat">
             <div class = "chat-button btn">
