--- a/html/index_logined.html
+++ b/html/index_logined.html
@@ -28,6 +28,7 @@
         </div>
 
         <div class = "post-button"><a href = "post.html">판매글 작성하기</a></div>
+        <div class = "post-button"><a href = "memberTierList.html">회원 등급 보기</a></div>
     
         <div class = "chat">
             <div class = "chat-button btn">
