--- a/html/mail_each.html
+++ b/html/mail_each.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <a href="index_logined.html"><h1 class = "title logo"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1></a>
+
     <div class="mail_each-head">
-        <a href="index.html"><h1 class = "title logo"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1></a>
-        <h2 class="mail_each-memberID">helloworld1234</h2>
+        <a href="mail.html"><img class="backward-icon" src="../img/backward2.png"></a>
+        <div class="mail_each-memberID"><strong>helloworld1234(채팅상대방 회원 ID)</strong></div>
     </div>
+
     <div class="mail_each-body">
+
         <div class = "chat-sent">
             <span class = "time">01:23</span>
             <span class = "message">끝말잇기 하자</span>
@@ -40,5 +44,6 @@
             <input class = "input-message">
         </form>
     </div>
+
 </body>
 </html>
