--- a/html/memberTierList.html
+++ b/html/memberTierList.html
@@ -12,44 +12,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html"><h1 class = "title logo"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1></a>
-    <div class="memberTier-instruction">
-        <h3><strong>회원 등급 기준</strong></h3>
-        <table>
-            <tr>
-                <th scope="col">신뢰도 점수</th>
-                <th scope="col">회원 등급</th>
-            </tr>
-            <tr>
-                <td>100~90</td>
-                <td>절대신</td>
-            </tr>
-            <tr>
-                <td>90~80</td>
-                <td>신의 대리인</td>
-            </tr>
-            <tr>
-                <td>80~70</td>
-                <td>왕</td>
-            </tr>
-            <tr>
-                <td>70~50</td>
-                <td>귀족</td>
-            </tr>
-            <tr>
-                <td>50~30</td>
-                <td>평민</td>
-            </tr>
-            <tr>
-                <td>30~10</td>
-                <td>노예</td>
-            </tr>
-            <tr>
-                <td>10~0</td>
-                <td>짐승</td>
-            </tr>
-
-        </table>
+    <a href="index_logined.html"><h1 class = "title logo"><span>R</span><span>E</span><span>B</span><span>O</span><span>O</span><span>K</span></h1></a>
+    <div class="memberTier-instruction-box">
+        <div class="memberTier-instruction">
+            <h3><strong>회원 등급 기준</strong></h3>
+            <table>
+                <tr>
+                    <th scope="col">신뢰도 점수</th>
+                    <th scope="col">회원 등급</th>
+                </tr>
+                <tr>
+                    <td>100~90</td>
+                    <td>절대신</td>
+                </tr>
+                <tr>
+                    <td>90~80</td>
+                    <td>신의 대리인</td>
+                </tr>
+                <tr>
+                    <td>80~70</td>
+                    <td>왕</td>
+                </tr>
+                <tr>
+                    <td>70~50</td>
+                    <td>귀족</td>
+                </tr>
+                <tr>
+                    <td>50~30</td>
+                    <td>평민</td>
+                </tr>
+                <tr>
+                    <td>30~10</td>
+                    <td>노예</td>
+                </tr>
+                <tr>
+                    <td>10~0</td>
+                    <td>짐승</td>
+                </tr>
+    
+            </table>
+        </div>
     </div>
     <div class="memberTierList-entire">
 
