--- a/html/search.html
+++ b/html/search.html
@@ -117,6 +117,7 @@
       </div>
 
       <div class = "post-button">판매글 작성하기</div>
+      <div class = "post-button"><a href = "memberTierList.html">회원 등급 보기</a></div>
 
       <div class = "chat">
           <div class = "chat-button btn">
